# mobile_base_msgs

./: CMakeLists.txt
msg/: Flipper.msg  Manipulator.msg  RobotCommunication.msg  RobotControl.msg  RobotState.msg
